# gr-learning

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt  dl_demod_RX.py  rl_mod_TX.py
docs/: CMakeLists.txt  README.learning
examples/: OFDM_RLRX.grc  OFDM_base.grc  OFDM_dl_demod_RX.grc  OFDM_dl_demod_RX_qt.grc  OFDM_dl_eq_demod.grc  OFDM_dlrx.grc  OFDM_rl_mod_TX.grc  OFDM_rl_mod_TX_qt.grc  OFDM_rldl_mod_demod.grc  OFDM_rldl_mod_demod_bokeh.grc  OFDM_rxsync.grc  QPSKchain.grc  chan_visualisation.grc  epy_block_0.py  epy_block_0_0.py  epy_block_1.py  epy_block_1_0.py  epy_block_1_0_0.py  learning_framework.grc  ofdm_base.py  ofdm_rlrx.py  rldl_mod_demod.py  top_block.py
grc/: CMakeLists.txt  learning.tree.yml  learning_align.block.yml  learning_ber_bf.block.yml  learning_button.block.yml  learning_correlator.block.yml  learning_correlator.xml  learning_data_switch.block.yml  learning_data_switch.xml  learning_dl_demod.block.yml  learning_dl_eq_demod.block.yml  learning_error_estimator.block.yml  learning_error_estimator.xml  learning_head.block.yml  learning_head.xml  learning_header_reader.block.yml  learning_header_reader.xml  learning_iq_compensator.block.yml  learning_iq_compensator.xml  learning_packet_header.xml  (+13 more)
python/learning/bindings/: CMakeLists.txt  align_python.cc  ber_bf_python.cc  correlator_python.cc  head_python.cc  packet_isolator_c_python.cc  python_bindings.cc
python/learning/bindings/docstrings/: align_pydoc_template.h  ber_bf_pydoc_template.h  correlator_pydoc_template.h  head_pydoc_template.h  packet_isolator_c_pydoc_template.h
(+73 files in other folders)
